fixes to center and right-align block images

--- a/src/resources/esc2html.css
+++ b/src/resources/esc2html.css
@@ -35,6 +35,15 @@
    transform-origin: 0 0;
 }
 
+.esc-justify-center .esc-bitimage {
+	margin-left: auto;
+	margin-right: auto;
+}
+
+.esc-justify-right .esc-bitimage {
+    margin-left: auto;
+}
+
 span {
     display: inline-block;
 }
